# lisons-local

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  COPYING.md  Indicator.qml  Logo.qml  Message.qml  build-release.sh  icons.qrc  main.qml  qml.qrc
lib/hobrasofthttp/: README.md  hobrasofthttpd.h  hobrasofthttpd.pri  httpconnection.cpp  httpconnection.h  httpcookie.cpp  httpcookie.h  httpgzipcompression.cpp  httpgzipcompression.h  httprequest.cpp  httprequest.h  httprequesthandler.cpp  httprequesthandler.h  httpresponse.cpp  httpresponse.h  httpserver.cpp  httpserver.h  httpsession.cpp  httpsession.h  httpsessionstore.cpp  httpsessionstore.h  httpsettings.cpp  httpsettings.h  httptcpserver.cpp  httptcpserver.h  license.txt  shtmlcontroller.cpp  shtmlcontroller.h  staticfilecontroller.cpp  staticfilecontroller.h  testsettings.h
res/: Indicator.qml  Message.qml  main.qml  res.qrc
res/ui/: Indicator.qml  Logo.qml  Message.qml  Style.js  main.qml  main_window.ui
src/: backend.cpp  backend.h  dist.cpp  dist.h  dist_manager.cpp  dist_manager.h  dist_manifest.cpp  dist_manifest.h  dist_updater.cpp  dist_updater.h  download_manager.cpp  download_manager.h  file_md5.cpp  file_md5.h  main.cpp  main_window.cpp  main_window.h
util/: build-release-mingw.sh
